// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 101,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 101,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 11,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 15,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 278,
    },
    Object {
      "category": "accessories",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1243,
    },
    Object {
      "category": "accessories",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 7,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1512,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 34,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 152,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 152,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black start",
      "externalProductCode": "66035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black end",
      "externalProductCode": "66035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black",
      "externalProductCode": "66035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 70,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 13,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 17,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 84,
    },
    Object {
      "category": "accessories",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 84,
    },
    Object {
      "category": "accessories",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 303,
    },
    Object {
      "category": "accessories",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1526,
    },
    Object {
      "category": "accessories",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 9,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1641,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 68,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 42,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley with dormer start 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 129,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 129,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black end",
      "externalProductCode": "66035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black dormer start",
      "externalProductCode": "66035765",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black",
      "externalProductCode": "66035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 38,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 11,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 15,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 112,
    },
    Object {
      "category": "accessories",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 112,
    },
    Object {
      "category": "accessories",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 299,
    },
    Object {
      "category": "accessories",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1289,
    },
    Object {
      "category": "accessories",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 7,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1528,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 53,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 56,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley with no calcualted accessories 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 152,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 152,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black start",
      "externalProductCode": "66035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black end",
      "externalProductCode": "66035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black",
      "externalProductCode": "66035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 70,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 13,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 17,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 9,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1641,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 68,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 42,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley with no valley metal flush 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 152,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 152,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 13,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 17,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 84,
    },
    Object {
      "category": "accessories",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 84,
    },
    Object {
      "category": "accessories",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 303,
    },
    Object {
      "category": "accessories",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1526,
    },
    Object {
      "category": "accessories",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 9,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1641,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 68,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 42,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley with top 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 118,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 118,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black start",
      "externalProductCode": "66035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black",
      "externalProductCode": "66035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 21,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black top",
      "externalProductCode": "66035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 11,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 15,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 59,
    },
    Object {
      "category": "accessories",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 59,
    },
    Object {
      "category": "accessories",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 241,
    },
    Object {
      "category": "accessories",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 773,
    },
    Object {
      "category": "accessories",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 7,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 981,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 42,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 30,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge with no start 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 103,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 103,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 11,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 15,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 278,
    },
    Object {
      "category": "accessories",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1243,
    },
    Object {
      "category": "accessories",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 7,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1512,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 34,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with stormBracket 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 101,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 101,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 11,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 15,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 278,
    },
    Object {
      "category": "accessories",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1243,
    },
    Object {
      "category": "accessories",
      "description": "Storm Bracket",
      "externalProductCode": "113456785",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 7,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1512,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 34,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "25762568",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with verge tile 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 11,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 15,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 278,
    },
    Object {
      "category": "accessories",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1243,
    },
    Object {
      "category": "accessories",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 7,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1479,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 0,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_verge tile black left",
      "externalProductCode": "87035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 17,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_verge tile black right",
      "externalProductCode": "87035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 17,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_verge half tile black left",
      "externalProductCode": "87035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 17,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_verge half tile black right",
      "externalProductCode": "87035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 17,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates without half tile 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 101,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 101,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 11,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 15,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 4,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 97,
    },
    Object {
      "category": "accessories",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 278,
    },
    Object {
      "category": "accessories",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1243,
    },
    Object {
      "category": "accessories",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 7,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1546,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 2,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator convertProductRowToResultsRow defaults to no contingency 1`] = `
Array [
  Object {
    "category": "tiles",
    "description": "Zanda Protector main tile black",
    "externalProductCode": "46035712",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 1440,
  },
  Object {
    "category": "tiles",
    "description": "Zanda Protector half tile black",
    "externalProductCode": "46035795",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 32,
  },
  Object {
    "category": "accessories",
    "description": "Zanda_Protector_verge metal flush black left start",
    "externalProductCode": "86035763",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 2,
  },
  Object {
    "category": "accessories",
    "description": "Zanda_Protector_verge metal flush black left",
    "externalProductCode": "86035761",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 96,
  },
  Object {
    "category": "accessories",
    "description": "Zanda_Protector_verge metal flush black right start",
    "externalProductCode": "86035764",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 2,
  },
  Object {
    "category": "accessories",
    "description": "Zanda_Protector_verge metal flush black right",
    "externalProductCode": "86035762",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 96,
  },
  Object {
    "category": "tiles",
    "description": "Zanda_Protector_ridge tile black",
    "externalProductCode": "46035761",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 46,
  },
  Object {
    "category": "ventilation",
    "description": "Ventilation Hood 1",
    "externalProductCode": "100456781",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 1,
  },
  Object {
    "category": "accessories",
    "description": "Test Guttering Black",
    "externalProductCode": "34391",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
    "packSize": "-",
    "quantity": 10,
  },
  Object {
    "category": "accessories",
    "description": "Test Guttering Hook Black",
    "externalProductCode": "34392",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
    "packSize": "-",
    "quantity": 14,
  },
  Object {
    "category": "accessories",
    "description": "Downpipe",
    "externalProductCode": "33332",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
    "packSize": "-",
    "quantity": 3,
  },
  Object {
    "category": "accessories",
    "description": "Downpipe Connector",
    "externalProductCode": "33331",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
    "packSize": "-",
    "quantity": 2,
  },
  Object {
    "category": "accessories",
    "description": "Clips",
    "externalProductCode": "113456781",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 92,
  },
  Object {
    "category": "accessories",
    "description": "Ridge and Hip Screw",
    "externalProductCode": "113456782",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 92,
  },
  Object {
    "category": "accessories",
    "description": "Long Screw",
    "externalProductCode": "113456783",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 264,
  },
  Object {
    "category": "accessories",
    "description": "Screw",
    "externalProductCode": "113456784",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 1183,
  },
  Object {
    "category": "accessories",
    "description": "Finishing Kit",
    "externalProductCode": "113456786",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 1,
  },
  Object {
    "category": "accessories",
    "description": "Underlay Divoroll TOP RU",
    "externalProductCode": "26583450",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
    "packSize": "-",
    "quantity": 2,
  },
  Object {
    "category": "accessories",
    "description": "Fuglelist ventilert",
    "externalProductCode": "5555551",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 6,
  },
  Object {
    "category": "accessories",
    "description": "Other accesories example",
    "externalProductCode": "5555550",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "2",
    "quantity": 0,
  },
]
`;
